<resources>
    <string name="app_name">NewsHacker</string>
    <string name="top_stories">Top Stories</string>
    <string name="new_stories">New Stories</string>
    <string name="best_stories">Best Stories</string>
    <string name="more">More</string>

    <string name="string_label_point">score</string>
    <string name="string_label_comment">Comments</string>
    <string name="string_label_article">Full Article</string>
    <string name="string_menu_search">Search</string>
</resources>