<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_top">

    <fragment
        android:id="@+id/navigation_top"
        android:name="com.steven.newshacker.ui.topstories.TopStoriesFragment"
        android:label="@string/top_stories"
        tools:layout="@layout/fragment_top_stories" />

    <fragment
        android:id="@+id/navigation_best"
        android:name="com.steven.newshacker.ui.beststories.BestStoriesFragment"
        android:label="@string/best_stories"
        tools:layout="@layout/fragment_best_stories" />

    <fragment
        android:id="@+id/navigation_new"
        android:name="com.steven.newshacker.ui.newstories.NewStoriesFragment"
        android:label="@string/new_stories"
        tools:layout="@layout/fragment_new_stories" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.steven.newshacker.ui.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
</navigation>