<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey"
    android:padding="8dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/layout_story_card_elevation"
        app:cardCornerRadius="@dimen/layout_story_card_radius">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/story_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/label_point_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:visibility="visible"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/font_point_label_size"
                android:text="@string/string_label_point" />

            <TextView
                android:id="@+id/label_point_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:textSize="@dimen/font_point_value_size"
                android:maxLength="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_weight="8.5">

            <TextView
                android:id="@+id/label_story_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/font_story_title_size"
                android:maxLines="2"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_margin="@dimen/layout_story_title_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_story_author_margin_left">

                <TextView
                    android:id="@+id/label_story_author"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/account_profile"
                    android:drawablePadding="@dimen/layout_story_author_drawable_padding_left"
                    android:textColor="@color/dark_grey"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/font_story_author_size"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/label_story_created_at"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/font_story_author_size"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="textStart"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="@dimen/layout_story_author_drawable_padding_left"
                    android:maxLines="1"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:weightSum="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.99"
                    app:drawableTopCompat="@drawable/ic_baseline_comment_24"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_grey"
                    android:text="@string/string_label_comment"
                    android:textSize="@dimen/font_story_comment_size" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="0.09"
                    android:layout_marginBottom="8dp"
                    android:alpha="0.2" />

                <TextView
                    android:id="@+id/btn_article"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.99"
                    app:drawableTopCompat="@drawable/ic_baseline_article_24"
                    android:gravity="center"
                    android:textColor="@color/dark_grey"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_story_article_size"
                    android:text="@string/string_label_article" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</androidx.appcompat.widget.LinearLayoutCompat>